logs/Slang/generated/encapsulation/8.18--inherited_local_from_inside.sv.log
name: inherited_local_from_inside
description: encapsulation test
should_fail: 1
tags: 8.18
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/encapsulation/8.18--inherited_local_from_inside.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/encapsulation/8.18--inherited_local_from_inside.sv:8:1: error: language feature not yet supported
class a_cls;
^~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/encapsulation/8.18--inherited_local_from_inside.sv:13:1: error: language feature not yet supported
class b_cls extends a_cls;
^~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/encapsulation/8.18--inherited_local_from_inside.sv:21:1: error: use of undeclared identifier 'b_cls'
b_cls b_obj;
^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/encapsulation/8.18--inherited_local_from_inside.sv:23:13: error: language feature not yet supported
    b_obj = new;
            ^~~
